part4/4.01/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-pong-ing
  namespace: random-pong
spec:
  rules: 
  - http:
      paths: 
      - path: /
        backend:
          serviceName: pong-back-svc
          servicePort: 2346
      - path: /pingpong
        backend:
          serviceName: pong-front-svc
          servicePort: 2345
      - path: /random
        backend:
          serviceName: random-svc
          servicePort: 2347          
      - path: /healthz-random
        backend:
          serviceName: random-svc
          servicePort: 2347
