part4/4.01/manifests/ingressold.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: random-pong-ing
  namespace: random-pong
spec:
  rules: 
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pong-front-svc
            port: 
              number: 8081
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pong-front-svc
            port: 
              number: 8081
      - path: /random
        pathType: Prefix
        backend:
          service:
            name: random-svc
            port: 
              number: 2347
